<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
 <include android:id="@+id/appbar_layout" layout="@layout/appbar"/>
 <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
  <LinearLayout android:orientation="vertical" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
   <TextView android:id="@+id/tv_restore_passwords_message" android:visibility="gone" android:text="@string/restore_previous_password_message" style="@style/Title" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
   <TextView android:id="@+id/tv_active_password" android:text="@string/active_password" style="@style/Title" android:layout_width="match_parent" android:layout_height="wrap_content"/>
   <TextView android:id="@+id/tv_active_password_description" android:text="@string/active_password_description" style="@style/Subtitle" android:layout_width="match_parent" android:layout_height="wrap_content"/>
   <TextView android:id="@+id/tv_active_password_status" android:text="@string/no_active_password" style="@style/Title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp"/>
   <com.google.android.material.button.MaterialButton android:id="@+id/btn_edit_active_password" android:text="@string/change_password" style="@style/M3ButtonFilled" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
   <View android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginVertical="20dp"/>
   <TextView android:id="@+id/tv_old_passwords" android:text="@string/old_passwords" style="@style/Title" android:layout_width="match_parent" android:layout_height="wrap_content"/>
   <TextView android:id="@+id/tv_old_passwords_message" android:text="@string/old_passwords_description" style="@style/Subtitle" android:layout_width="match_parent" android:layout_height="wrap_content"/>
   <TextView android:id="@+id/tv_old_passwords_status" android:text="0" style="@style/Title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp"/>
   <com.google.android.material.button.MaterialButton android:id="@+id/btn_add_old_password" android:text="@string/add_old_password" style="@style/M3ButtonFilled" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
  </LinearLayout>
 </androidx.core.widget.NestedScrollView>
 <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:id="@+id/btn_done" android:text="@string/done" android:visibility="gone" android:layout_gravity="end|bottom" android:layout_margin="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>