<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent"><LinearLayout android:orientation="vertical" android:padding="@dimen/spacing_medium" android:layout_width="match_parent" android:layout_height="wrap_content"><com.google.android.material.appbar.MaterialToolbar android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:title="@string/apps_quick_actions"/><TextView android:id="@+id/apps_quick_backup" android:text="@string/backup_all_apps" style="@style/Title" android:padding="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content"/><TextView android:id="@+id/apps_quick_pending" android:text="@string/backup_missing_apps" style="@style/Title" android:padding="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content"/><TextView android:id="@+id/apps_quick_updated" android:text="@string/backup_updated_apps" style="@style/Title" android:padding="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content"/><TextView android:id="@+id/apps_quick_redo" android:text="@string/redo_backups" style="@style/Title" android:padding="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content"/><TextView android:id="@+id/apps_quick_sync" android:text="@string/sync_device_backups_to_cloud" style="@style/Title" android:padding="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content"/><TextView android:id="@+id/apps_quick_restore_all" android:text="@string/restore_all_apps" style="@style/Title" android:padding="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content"/><TextView android:id="@+id/apps_quick_restore_missing" android:text="@string/restore_missing_apps" style="@style/Title" android:padding="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content"/><TextView android:id="@+id/apps_quick_restore_newer" android:text="@string/restore_newer_versions" style="@style/Title" android:padding="@dimen/spacing_normal" android:layout_width="match_parent" android:layout_height="wrap_content"/></LinearLayout></ScrollView>